<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".controllers.meetings.AddMeetingActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addMeetingActivity_backPreviousActivity"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/back_to_meetings_list"
            android:gravity="center"
            android:text=""
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginStart="16dp"
            android:text="@string/new_meeting"
            android:gravity="start|center"
            android:textSize="36sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what"
        android:background="@color/MainColor"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:padding="8dp"/>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/addMeetingActivity_meetingSubjectTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/title"
            android:hint="@string/title"
            android:inputType="text"
            android:text="@string/title"
            tools:ignore="SpeakableTextPresentCheck" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/addMeetingActivity_meetingSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/subject"
            android:hint="@string/description_of_meeting"
            android:inputType="textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:gravity="top"
            android:text="@string/this_is_a_short_description"
            tools:ignore="SpeakableTextPresentCheck" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/where"
        android:background="@color/MainColor"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:padding="8dp"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:id="@+id/addMeetingActivity_placesRadioGroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/when"
        android:background="@color/MainColor"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:padding="8dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/addMeetingActivity_datePicker"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:text="@string/date"
            android:background="@color/SecondaryColor"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/addMeetingActivity_timePicker"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:text="@string/time"
            android:background="@color/SecondaryColor"
            android:textColor="@color/white"
            android:textSize="16sp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:rotation="-90"
            android:textSize="20sp"
            android:text="@string/duration_in_minutes" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:foregroundGravity="left"
            android:src="@drawable/ic_baseline_timelapse_128_sc"
            android:contentDescription="@string/counter" />

        <NumberPicker
            android:id="@+id/addMeetingActivity_durationPicker"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who"
        android:background="@color/MainColor"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:padding="8dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/addMeetingActivity_participantsCheckBoxGroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/addMeetingActivity_meetingCreate"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/MainColor"
        android:text="@string/create_meeting"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal" />

    </LinearLayout>

</ScrollView>