<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".controllers.viewpager.ViewPagerActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/appTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            app:titleTextColor="@color/white"
            android:background="@color/MainColor"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/app_name">

            <Button
                android:id="@+id/viewpager_meetingsFilter"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_filter_white"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/filterbutton">
            </Button>

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/viewpager_tabs"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/SecondaryColor"
            app:tabTextColor="@color/white"
            app:tabIndicatorColor="@color/white"
            app:tabGravity="fill"
            app:tabMode="fixed" >

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meetings" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rooms" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:contentDescription="@string/viewpager" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/viewpager_addMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_add_30"
        app:backgroundTint="@color/SecondaryColor"
        android:visibility="visible"
        android:contentDescription="@string/button">
    </android.support.design.widget.FloatingActionButton>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/viewpager_addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:backgroundTint="@color/SecondaryColor"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_person_add_30"
        android:contentDescription="@string/button">
    </android.support.design.widget.FloatingActionButton>

</android.support.design.widget.CoordinatorLayout>