...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".controllers.meetings.MeetingDetailsActivity">

    <FrameLayout
        android:id="@+id/frameLayoutMeetingProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".controllers.meetings.MeetingDetailsActivity">

        <!-- Meeting Details -->
        <ImageView
...
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:background="#fff"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/meetingDetails_subjectTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
...
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/meetingDetails_meetingDelete"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/MainColor"
                android:text="@string/delete"
                android:textColor="@color/white"
...
